fixed scroll for overflow in move folders

--- a/src/scss/components/_template.scss
+++ b/src/scss/components/_template.scss
@@ -41,4 +41,9 @@
         pointer-events: none;
         filter: blur(0.1rem);
     }
+
+    &__move {
+        height: 150px;
+        overflow-y: scroll;
+    }
 }
